--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "framer-motion": "^10.16.4",
     "leva": "^0.9.35",
     "next": "^13.5.3",
+    "postprocessing": "^6.33.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-portal": "^4.2.2",
