--- a/package.json
+++ b/package.json
@@ -15,14 +15,14 @@
     "@radix-ui/react-checkbox": "^1.0.4",
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-radio-group": "^1.1.3",
-    "@react-three/drei": "^9.86.0",
-    "@react-three/fiber": "^8.14.3",
-    "@react-three/postprocessing": "^2.15.1",
-    "clsx": "^2.0.0",
+    "@react-three/drei": "^9.105.4",
+    "@react-three/fiber": "^8.16.1",
+    "@react-three/postprocessing": "^2.16.2",
+    "clsx": "^2.1.0",
     "framer-motion": "^10.16.4",
     "leva": "^0.9.35",
+    "maath": "^0.10.7",
     "next": "^13.5.3",
-    "postprocessing": "^6.33.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-portal": "^4.2.2",
@@ -51,7 +51,7 @@
     "@types/three": "^0.156.0",
     "autoprefixer": "^10.4.16",
     "chalk": "^5.3.0",
-    "chromatic": "^7.2.0",
+    "chromatic": "^11.3.0",
     "eslint": "^8.50.0",
     "eslint-config-next": "^13.5.3",
     "eslint-config-prettier": "^9.0.0",
