--- a/package.json
+++ b/package.json
@@ -17,12 +17,13 @@
     "@radix-ui/react-radio-group": "^1.1.3",
     "@react-three/drei": "^9.105.4",
     "@react-three/fiber": "^8.16.2",
+    "@react-three/gpu-pathtracer": "^0.1.1",
     "@react-three/postprocessing": "^2.16.2",
     "clsx": "^2.1.0",
     "framer-motion": "^10.16.4",
     "leva": "^0.9.35",
     "maath": "^0.10.7",
-    "next": "^14.2.1",
+    "next": "^14.2.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-portal": "^4.2.2",
@@ -30,7 +31,8 @@
     "sharp": "^0.32.6",
     "swiper": "^10.3.1",
     "tailwindcss-fluid-type": "^2.0.3",
-    "three": "^0.156.1"
+    "three": "^0.156.1",
+    "zustand": "^4.5.2"
   },
   "devDependencies": {
     "@slicemachine/adapter-next": "^0.3.17",
