--- a/package.json
+++ b/package.json
@@ -19,10 +19,11 @@
     "@react-three/fiber": "^8.16.2",
     "@react-three/postprocessing": "^2.16.2",
     "clsx": "^2.1.1",
-    "framer-motion": "^11.1.7",
+    "framer-motion": "^10.16.4",
+    "framer-motion-3d": "^11.1.7",
     "leva": "^0.9.35",
     "maath": "^0.10.7",
-    "next": "^14.2.2",
+    "next": "^14.2.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-portal": "^4.2.2",
